examples/test/testpolicy676.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy676
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key35: value35
      key24: value15
      key44: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value23
          key30: value23
          key3: value5
      podSelector:
        matchLabels:
          key6: value8
          key42: value19
          key3: value7
